# ipo-analysis-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/conventions/: ipo-domain-conventions.md  shared-ipo-conventions.md
docs/coordination/: per-skill-thread-contract.md  per-skill-worktree-guide.md  skill-build-matrix.md  worktree-orchestration.md
evals/: README.md
evals/_template/: questions.jsonl  results.md  rubric.md
evals/ipo-allotment-checker/: questions.jsonl  results.md  rubric.md
evals/ipo-application-guide/: questions.jsonl  results.md  rubric.md
evals/ipo-apply-advisor/: questions.jsonl  results.md  rubric.md
evals/ipo-calendar/: questions.jsonl  results.md  rubric.md
evals/ipo-drhp-analyzer/: questions.jsonl  results.md  rubric.md
evals/ipo-financials-scorer/: questions.jsonl  results.md  rubric.md
evals/ipo-gmp-tracker/: questions.jsonl  results.md  rubric.md
evals/ipo-listing-day-strategy/: questions.jsonl  results.md  rubric.md
evals/ipo-peer-comparison/: questions.jsonl  results.md  rubric.md
evals/ipo-red-flags-detector/: questions.jsonl  results.md  rubric.md
evals/ipo-scenario-simulator/: questions.jsonl  results.md  rubric.md
evals/ipo-subscription-tracker/: questions.jsonl  results.md  rubric.md
skills/ipo-allotment-checker/: SKILL.md
skills/ipo-application-guide/: SKILL.md
skills/ipo-apply-advisor/: SKILL.md
skills/ipo-calendar/: SKILL.md
skills/ipo-drhp-analyzer/: SKILL.md
skills/ipo-financials-scorer/: SKILL.md
skills/ipo-gmp-tracker/: SKILL.md
(+62 files in other folders)
